<resources>
    <string name="app_name">GiltSay</string>
    <string name="main_first_radiobutton_name">首页</string>
    <string name="main_second_radiobutton_name">榜单</string>
    <string name="main_third_radiobutton_name">分类</string>
    <string name="main_forth_radiobutton_name">个人</string>
    <string name="class_column_text">栏目</string>
    <string name="class_class_text">品类</string>
    <string name="class_style_text">风格</string>
    <string name="class_object_text">对象</string>
    <string name="class_findmore_text">查看全部</string>
    <string name="home_liwushuo_text">礼物说</string>
    <string name="home_search_text">中秋佳节送好礼</string>
    <string name="list_top_text">礼物榜</string>
    <string name="person_signin_text">请登录</string>
    <string name="person_five_text1">购物车</string>
    <string name="person_five_text2">订单</string>
    <string name="person_five_text3">礼券</string>
    <string name="person_five_text4">关注</string>
    <string name="person_five_text5">客服</string>
    <string name="person_radiobutton_text1">攻略</string>
    <string name="person_radiobutton_text2">单品</string>


    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>

    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>

</resources>
